--- a/widget.ui
+++ b/widget.ui
@@ -16,9 +16,9 @@
   <widget class="QSpinBox" name="spinBoxR1">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>680</y>
-     <width>47</width>
+     <x>160</x>
+     <y>620</y>
+     <width>51</width>
      <height>24</height>
     </rect>
    </property>
@@ -27,14 +27,17 @@
    </property>
    <property name="maximum">
     <number>180</number>
+   </property>
+   <property name="value">
+    <number>-135</number>
    </property>
   </widget>
   <widget class="QSpinBox" name="spinBoxR2">
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>680</y>
-     <width>47</width>
+     <y>620</y>
+     <width>51</width>
      <height>24</height>
     </rect>
    </property>
@@ -44,12 +47,15 @@
    <property name="maximum">
     <number>180</number>
    </property>
+   <property name="value">
+    <number>50</number>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>680</y>
+     <y>620</y>
      <width>131</width>
      <height>16</height>
     </rect>
@@ -62,7 +68,7 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>660</y>
+     <y>600</y>
      <width>59</width>
      <height>15</height>
     </rect>
@@ -75,13 +81,61 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>660</y>
+     <y>600</y>
      <width>59</width>
      <height>15</height>
     </rect>
    </property>
    <property name="text">
     <string>РЛС 2</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>660</y>
+     <width>91</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Прозрачность</string>
+   </property>
+  </widget>
+  <widget class="QSlider" name="hSlider1">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>660</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="singleStep">
+    <number>0</number>
+   </property>
+   <property name="value">
+    <number>50</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QSlider" name="hSlider2">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>660</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>50</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
