--- a/widget.ui
+++ b/widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>929</width>
-    <height>724</height>
+    <width>1000</width>
+    <height>718</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -93,8 +93,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>660</y>
+     <x>0</x>
+     <y>680</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -106,10 +106,10 @@
   <widget class="QSlider" name="hSlider1">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>160</x>
      <y>660</y>
-     <width>71</width>
-     <height>16</height>
+     <width>150</width>
+     <height>15</height>
     </rect>
    </property>
    <property name="singleStep">
@@ -125,10 +125,10 @@
   <widget class="QSlider" name="hSlider2">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>660</y>
-     <width>71</width>
-     <height>16</height>
+     <x>160</x>
+     <y>680</y>
+     <width>150</width>
+     <height>15</height>
     </rect>
    </property>
    <property name="value">
@@ -136,6 +136,61 @@
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QSlider" name="hSliderM">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>700</y>
+     <width>150</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>50</number>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>660</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>РЛС 1</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>680</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>РЛС 2</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>700</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Карта</string>
    </property>
   </widget>
  </widget>
