Подстройка отображения данных РЛС под текущий zoom level.

--- a/widget.ui
+++ b/widget.ui
@@ -65,6 +65,19 @@
     <number>-1</number>
    </property>
   </widget>
+  <widget class="QPushButton" name="pbReset">
+   <property name="geometry">
+    <rect>
+     <x>760</x>
+     <y>410</y>
+     <width>140</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Сброс настроек</string>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
