--- a/widget.ui
+++ b/widget.ui
@@ -10,28 +10,34 @@
     <height>718</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Widget</string>
   </property>
   <widget class="QPushButton" name="pbUpdate">
    <property name="geometry">
     <rect>
-     <x>760</x>
+     <x>750</x>
      <y>370</y>
-     <width>140</width>
+     <width>161</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>Обновить</string>
+    <string>Обновить изображение</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pbAddLoc">
    <property name="geometry">
     <rect>
-     <x>760</x>
+     <x>750</x>
      <y>290</y>
-     <width>140</width>
+     <width>161</width>
      <height>30</height>
     </rect>
    </property>
@@ -42,23 +48,23 @@
   <widget class="QPushButton" name="pbDelLoc">
    <property name="geometry">
     <rect>
-     <x>760</x>
+     <x>750</x>
      <y>330</y>
-     <width>140</width>
+     <width>161</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>Удалить локаторы</string>
+    <string>Удалить локатор</string>
    </property>
   </widget>
   <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
-     <x>680</x>
+     <x>670</x>
      <y>20</y>
-     <width>301</width>
-     <height>251</height>
+     <width>321</width>
+     <height>261</height>
     </rect>
    </property>
    <property name="currentIndex">
@@ -68,14 +74,14 @@
   <widget class="QPushButton" name="pbReset">
    <property name="geometry">
     <rect>
-     <x>760</x>
+     <x>750</x>
      <y>410</y>
-     <width>140</width>
+     <width>161</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>Сброс настроек</string>
+    <string>Оптимизировать вид</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pbStartImit">
@@ -102,6 +108,25 @@
    </property>
    <property name="text">
     <string>Стоп</string>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>480</y>
+     <width>301</width>
+     <height>161</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="title">
+    <string>Общие параметры</string>
    </property>
   </widget>
  </widget>
