--- a/widget.ui
+++ b/widget.ui
@@ -129,6 +129,58 @@
     <string>Общие параметры</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pbBeginAddTarg">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>680</y>
+     <width>141</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Задать траеторию</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbEndAddTarg">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>680</y>
+     <width>131</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Добавить цель</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelTargNum">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>680</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Количество целей - 0</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbDeleteTargs">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>680</y>
+     <width>131</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Удалить все цели</string>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
