--- a/widget.ui
+++ b/widget.ui
@@ -48,9 +48,9 @@
   <widget class="QPushButton" name="pbStartImit">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>670</y>
-     <width>90</width>
+     <x>710</x>
+     <y>640</y>
+     <width>71</width>
      <height>30</height>
     </rect>
    </property>
@@ -61,9 +61,9 @@
   <widget class="QPushButton" name="pbStopImit">
    <property name="geometry">
     <rect>
-     <x>830</x>
-     <y>670</y>
-     <width>90</width>
+     <x>890</x>
+     <y>640</y>
+     <width>71</width>
      <height>30</height>
     </rect>
    </property>
@@ -71,56 +71,43 @@
     <string>Стоп</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pbBeginAddTarg">
+  <widget class="QPushButton" name="pbPauseImit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>680</y>
-     <width>141</width>
+     <x>800</x>
+     <y>640</y>
+     <width>71</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>Задать траеторию</string>
+    <string>Пауза</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pbEndAddTarg">
+  <widget class="QPushButton" name="pbLoadScenario">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>710</x>
      <y>680</y>
-     <width>131</width>
+     <width>121</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>Добавить цель</string>
+    <string>Загрузить сц-й</string>
    </property>
   </widget>
-  <widget class="QLabel" name="labelTargNum">
+  <widget class="QPushButton" name="pbSaveScenario">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>850</x>
      <y>680</y>
-     <width>151</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Количество целей - 0</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pbDeleteTargs">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>680</y>
-     <width>131</width>
+     <width>111</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>Удалить все цели</string>
+    <string>Сохранить сц-й</string>
    </property>
   </widget>
  </widget>
